2012-01-02  Fred Kiefer <FredKiefer@gmx.de>

	* Source/GSSocketStream.m (-initWithInput:output:): Attempt to
	replace deprecated GNUTLS functions with newer ones for GNUTLS >= 2.12.

2012-01-02  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSArray.m (-objectsAtIndexes:): Fix comparision of
	unsigned variable with NSNotFound.

2012-01-02 02:26-EST Gregory John Casamento <greg.casamento@gmail.com>

	* Source/NSXMLNode.m: Minor correction. Move setName out of
	private category.
	* Tests/base/NSXMLNode/children.m: Update test.

2012-01-01  Fred Kiefer <FredKiefer@gmx.de>

	* Headers/Foundation/NSXMLDTDNode.h,
	* Headers/Foundation/NSXMLDTD.h: Remove duplicate declaration of
	ivar _name to get base to compile again.

2011-12-30  Doug Simons <doug.simons@testplant.com>

	* Source/NSXMLElement.m: Set Elements to be NSXMLElementKind.

2011-12-30 14:22-EST Gregory John Casamento <greg.casamento@gmail.com>

	* Headers/Foundation/NSXMLDocument.h
	* Headers/Foundation/NSXMLElement.h
	* Headers/Foundation/NSXMLNode.h
	* Source/NSXMLDocument.m
	* Source/NSXMLElement.m
	* Source/NSXMLNode.m
	* Source/NSXMLPrivate.h
	* Tests/base/NSXMLNode/children.m
	* Tests/base/NSXMLNode/kinds.m: First cut at NSXMLDocument
	implementation.

2011-12-29  Doug Simons <doug.simons@testplant.com>

	* Source/NSCalendarDate.m: Fix -addTimeInterval: to copy calendarFormat
	of original date.

2011-12-24  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSConnection.m: Fix retain rount error spotted by
	<rajendra@teamf1.com> (bug #35164)

2011-12-23  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Headers/Foundation/NSTextCheckingResult.h:
	* Source/NSTextCheckingResult.m	(-resultByAdjustingRangesWithOffset:):
	Implement method.

2011-12-23  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Headers/Foundation/NSTextCheckingResult.h:
	* Source/NSTextCheckingResult.m: Add copyright notice.

	* Source/NSTextCheckingResult.m(-result, -range): Raise exception
	in abstract base class implementation. This is what OS X does.
